# pixel

./: .gitignore  README.md  pyproject.toml  quality.sh  requirements.txt  style.sh
.github/workflows/: tests.yml
config/: README.md
data/: README.md
doc/: README.md  spherical_baseline.md
src/atpixel/: MRI_to_stl.py  NIfTI_to_numpy.py  command_line.py  hello.py  visualize_stl.py
tests/: quad_sphere_no_metadata.nii  test_MRI_to_stl.py  test_NIfTI_to_numpy.py  test_command_line.py  test_hello.py  test_visualize_stl.py
tests/files/: mini_IXI661-HH-2788-T1_no_metadata.nii  mini_IXI661-HH-2788-T1_no_metadata.yaml  mini_T1_Utah_SCI_no_metadata.nii  mini_T1_Utah_SCI_no_metadata.yaml  quad_sphere_no_metadata.yaml  quad_sphere_no_metadata_outer.stl  small_sphere_no_metadata.nii  small_sphere_no_metadata.yaml  small_sphere_no_metadata_bad_keys.yaml  small_sphere_no_metadata_bad_version.yaml  small_sphere_no_metadata_bad_yaml_load.yaml
