[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "atpixel"
version = "0.0.1a1"
authors = [
  { name="Chad Hovey", email="chovey@sandia.gov" },
  { name="Emma Lejeune", email="elejeune@bu.edu" },
]
description = "autotwin workflow, pixel functionality"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "pytest",
    "pytest-cov"
]

[project.urls]
"Homepage" = "https://github.com/autotwin/pixel"
"Bug Tracker" = "https://github.com/autotwin/pixel/issues"
