[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "atpixel"
version = "0.0.5"
authors = [
  { name="Chad Hovey", email="chovey@sandia.gov" },
  { name="Emma Lejeune", email="elejeune@bu.edu" },
]
description = "autotwin workflow, pixel functionality"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "alphashape==1.3.1",
    "attrs==22.1.0",
    "black==22.6.0",
    "click==8.1.3",
    "click-log==0.4.0",
    "coverage==6.4.4",
    "cycler==0.11.0",
    "flake8",
    "fonttools==4.34.4",
    "imageio==2.21.1",
    "importlib-metadata==4.12.0",
    "iniconfig==1.1.1",
    "kiwisolver==1.4.4",
    "matplotlib==3.5.3",
    "mypy-extensions==0.4.3",
    "networkx==2.6.3",
    "nibabel==4.0.1",
    "numpy==1.22",
    "numpy-stl==2.17.1",
    "opencv-python==4.6.0.66",
    "packaging==21.3",
    "pathspec==0.9.0",
    "Pillow==9.2.0",
    "platformdirs==2.5.2",
    "pluggy==1.0.0",
    "py==1.11.0",
    "PyYAML==6.0",
    "pydicom==2.3.0",
    "pyparsing==3.0.9",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "python-dateutil==2.8.2",
    "python-utils==3.3.3",
    "PyWavelets==1.3.0",
    "Rtree==1.0.0",
    "scikit-image==0.19.3",
    "scipy==1.7.3",
    "Shapely==1.8.2",
    "six==1.16.0",
    "tifffile==2021.11.2",
    "tomli==2.0.1",
    "trimesh==3.13.4",
    "typed-ast==1.5.4",
    "typing_extensions==4.3.0",
    "zipp==3.8.1",
]

[project.urls]
"Homepage" = "https://github.com/autotwin/pixel"
"Bug Tracker" = "https://github.com/autotwin/pixel/issues"
