[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "atpixel"
version = "0.0.7"
authors = [
  { name="Chad Hovey", email="chovey@sandia.gov" },
  { name="Emma Lejeune", email="elejeune@bu.edu" },
]
description = "autotwin workflow, pixel functionality"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "alphashape==1.3.1",
    "attrs==22.1.0",
    "black",
    "click==8.1.3",
    "click-log==0.4.0",
    "coverage==6.4.4",
    "cycler==0.11.0",
    "flake8",
    "fonttools",
    "imageio==2.21.1",
    "importlib-metadata==4.12.0",
    "iniconfig==1.1.1",
    "kiwisolver==1.4.4",
    "matplotlib",
    "mypy-extensions==0.4.3",
    "networkx==2.6.3",
    "nibabel==4.0.1",
    "numpy==1.26.4",
    "numpy-stl",
    "opencv-python",
    "packaging==21.3",
    "pathspec==0.9.0",
    "Pillow",
    "platformdirs==2.5.2",
    "pluggy==1.0.0",
    "py==1.11.0",
    "PyYAML==6.0",
    "pydicom==2.3.0",
    "pyparsing==3.0.9",
    "pytest",
    "pytest-cov",
    "python-dateutil==2.8.2",
    "python-utils==3.3.3",
    "PyWavelets==1.3.0",
    "Rtree",
    "scikit-image",
    "scipy",
    "Shapely==1.8.5",
    "six==1.16.0",
    "tifffile==2021.11.2",
    "tomli==2.0.1",
    "trimesh==3.13.4",
    "typed-ast==1.5.4",
    "typing_extensions==4.3.0",
    "zipp",
]


# Entry Points
# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
[project.scripts]
version="atpixel.command_line:version"

[project.urls]
"Homepage" = "https://github.com/autotwin/pixel"
"Bug Tracker" = "https://github.com/autotwin/pixel/issues"
